[package]
name = "codecrafters-grep"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bitflags = "2.9.4"
bytes = "1.3.0"                                  # helps manage buffers
clap = { version = "4.5.47", features = ["derive"] }
log = "0.4.28"
thiserror = "1.0.38"                             # error handling
